// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  className="FieldGroup"
  data-test-id="cf-ui-field-group"
>
  <div
    className="FieldGroup__item"
    key=".0"
  >
    <CheckboxField
      checked={false}
      helpText="Click if you agree"
      id="agree"
      inputType="checkbox"
      labelIsLight={false}
      labelText="Do you agree?"
      testId="cf-ui-checkbox-field"
    />
  </div>
  <div
    className="FieldGroup__item"
    key=".1"
  >
    <CheckboxField
      checked={false}
      helpText="Click if you really agree"
      id="reallyAgree"
      inputType="checkbox"
      labelIsLight={false}
      labelText="Do you really agree?"
      testId="cf-ui-checkbox-field"
    />
  </div>
</div>
`;

exports[`renders the component children in a row 1`] = `
<div
  className="FieldGroup my-extra-class FieldGroup--row"
  data-test-id="cf-ui-field-group"
>
  <div
    className="FieldGroup__item"
    key=".0"
  >
    <CheckboxField
      checked={false}
      helpText="Click if you agree"
      id="agree"
      inputType="checkbox"
      labelIsLight={false}
      labelText="Do you agree?"
      testId="cf-ui-checkbox-field"
    />
  </div>
  <div
    className="FieldGroup__item"
    key=".1"
  >
    <CheckboxField
      checked={false}
      helpText="Click if you really agree"
      id="reallyAgree"
      inputType="checkbox"
      labelIsLight={false}
      labelText="Do you really agree?"
      testId="cf-ui-checkbox-field"
    />
  </div>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  className="FieldGroup my-extra-class"
  data-test-id="cf-ui-field-group"
>
  <div
    className="FieldGroup__item"
    key=".0"
  >
    <CheckboxField
      checked={false}
      helpText="Click if you agree"
      id="agree"
      inputType="checkbox"
      labelIsLight={false}
      labelText="Do you agree?"
      testId="cf-ui-checkbox-field"
    />
  </div>
  <div
    className="FieldGroup__item"
    key=".1"
  >
    <CheckboxField
      checked={false}
      helpText="Click if you really agree"
      id="reallyAgree"
      inputType="checkbox"
      labelIsLight={false}
      labelText="Do you really agree?"
      testId="cf-ui-checkbox-field"
    />
  </div>
</div>
`;
